cmake_minimum_required (VERSION 2.6)
PROJECT (joystick)

FIND_PACKAGE (Threads)
#FIND_PACKAGE (Boost 1.55. COMPONENTS system filesystem REQUIRED )

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp Joystick.cpp)

#TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${Boost_INCLUDE_DIR} PRIVATE ../../include)
#TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES} fcl_common)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ../../include)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT} fcl_common)

